<package format="3">
  <name>point_cloud_transport_tutorial</name>
  <version>0.0.0</version>
  <description>Tutorial for point_cloud_transport.</description>
  <author>Jakub Paplham</author>
  <maintainer email="alejandro@openrobotics.org">Alejandro Hernández Cordero</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>point_cloud_transport</depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
